# ecu-toolkit-studio

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ecu_toolkit_studio/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: ecu_model.dart  main.dart  main_shell.dart
lib/models/: ecu_profile.dart  flash_models.dart  hardware_models.dart  target.dart  target_connection.dart
lib/native/: ecu_models.dart  ttctk.dart
lib/native/lib/: .gitignore
lib/pages/: connection_page.dart  flash_page.dart  functional_pages.dart  settings_page.dart  target_info_page.dart
lib/pages/flash_tabs/: download_tab.dart  erase_tab.dart  fdr_tab.dart  flash_tab_components.dart  security_tab.dart  setup_tab.dart  upload_tab.dart
lib/services/: connection_service.dart  log_service.dart  settings_service.dart  target_info_service.dart  target_manager_service.dart  toolkit_service.dart
lib/widgets/: about_dialog.dart  log_panel.dart
linux/: .gitignore  CMakeLists.txt
linux/runner/: my_application.cc
macos/: .gitignore
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/ecu_models/: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
native/ecu_models/lib/: README.md
native/ecu_models/src/: ecu_model_test.cpp  ecu_models.c  ecu_models.cpp  ecu_models.h
web/: index.html  manifest.json
windows/: .gitignore  CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
